--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
         <title>Seajs</title>
     </head>
     <body>
-        <script type="text/javascript" src="/lib/seajs/sea.js"></script>
+        <script type="text/javascript" src="/lib/seajs/sea-debug.js"></script>
         <script type="text/javascript" src="/test/config.js"></script>
         <script type="text/javascript">
             seajs.use("test");
